Use JDK 9 for compiling
JDK 8 drops support for Java 5.